# document-question-answering-assistant

./: .gitignore  README.md  pyproject.toml
data/: input.json  input_sample.json  nq_raw.csv
output/: nq_256_128_10_output.json  nq_256_128_5.json  nq_256_128_5_output_nto.json  nq_384_128_3.json  nq_384_128_3_output.json  nq_384_128_5_output.json  nq_384_128_5_output_nto.json  nq_384_256_10_output.json  nq_384_256_3_output.json  nq_384_256_5.json  nq_384_256_5_output_nto.json  nq_512_128_10_output_nto.json  nq_512_128_3_output.json  nq_512_256_10_output.json  nq_512_256_10_output_nto.json  output.json  squad_512_128_3.json
src/: evaluate.py  generate_answer.py  main.ipynb  nq.py  squad.ipynb  squad.py
