[project]
name = "document-question-answering-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.4.0",
]
